# gifcap

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: post-build.sh
spikes/: RESULTS.md
spikes/spike-a-selfexclusion/: Cargo.toml
spikes/spike-a-selfexclusion/src/: main.rs  spike_macos.rs
spikes/spike-b-encoding/: Cargo.toml
spikes/spike-b-encoding/src/: encode.rs  main.rs  quantize.rs
spikes/spike-c-capture/: Cargo.toml
spikes/spike-c-capture/src/: capture_macos.rs  capture_windows.rs  main.rs
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: macos.rs  mod.rs  windows.rs
src-tauri/src/commands/: capture.rs  compression.rs  mod.rs
src-tauri/src/compression/: mod.rs  quantize.rs  worker.rs
src-tauri/src/platform/: macos.rs
src/capture-window/: capture.ts  index.html
src/preferences/: index.html  preferences.ts
src/preview-window/: index.html  preset-tile.ts
src/shared/: tauri-api.ts
