[package]
name = "spike-a-selfexclusion"
version = "0.1.0"
edition = "2021"
# Throwaway spike — do not merge into main app.
# Purpose: validate that SCContentFilter::with_display_excluding_windows
# correctly excludes GifCap's own windows from a captured frame.

[[bin]]
name = "spike-a"
path = "src/main.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
core-media-rs = "0.3"
core-video-rs = "0.3"
# objc 0.2 is already a transitive dep of screencapturekit but must be
# declared explicitly to use msg_send! and class! in our code.
objc = { version = "0.2", features = ["exception"] }
